--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -88,14 +88,14 @@ img {
 		align-items: center;
 		justify-content: center;
 		text-align: center;
-		color: #fff;
+		color:  $accents;
 		div{
 			transition: 0.5s ease-in-out;
 			padding: 1.5rem 0;
 			height: 6rem;
 		}
 		div:hover {
-			color: $accents;
+			color:#fff;
 			cursor: pointer;
 		}
 	}
@@ -240,7 +240,14 @@ img {
 	margin-left: 1rem;
 }
 
-
+@media (max-width: 1000px) {
+	#tab-1-content .tab-1-content-inner {
+		img{
+			height: 50vh;
+			width: fit-content;
+		}
+	}
+}
     
 @media (max-width: 960px) {
     .showcase {
