finished home page and started on game page

--- a/src/styles/gameCard.scss
+++ b/src/styles/gameCard.scss
@@ -47,3 +47,11 @@
     translate: 0;
     opacity: 1;
 }
+
+
+@media(max-height: 1024px) {
+    .game-container{
+        margin: 10px;
+        height: 15rem;
+    }
+}
