--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -27,7 +27,7 @@ header {
     }
     
     img{
-        height: 4rem;
+        height: 3rem;
     }
 }
 
@@ -35,7 +35,7 @@ header {
 .hamburger{
     display: block;
     margin: 15px;
-    width: 40px;
+    width: 25px;
     cursor: pointer;
     appearance: none;
     background: none;
@@ -67,7 +67,7 @@ header {
 .mobile-nav{
     @include reset-list-styles;
     position: fixed;
-    top: 0.8rem;
+    top: 0rem;
     left: -90%;
     min-height: 100vh;
     width: 40%;
@@ -75,18 +75,16 @@ header {
     background-color:$secondary;
     margin-top: 2.5rem;
     transition: 0.4s;
-    text-align: center;
-    padding: 3rem;
-
+    padding: 2rem;
     ul{
         @include border-bottom-animation-white;
+        @include flex(space-evenly, flex-start);
         height: 50vh;
-        width: 40vw;
+        width: fit-content;
         position: absolute;
-        display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
         font-family: 'Roboto Slab', serif;
+
         li{
             a{
                 color: white;
