--- a/src/styles/gamePage.scss
+++ b/src/styles/gamePage.scss
@@ -2,9 +2,9 @@
 
 .game-page-container{
     padding: 6rem 5rem;
-    @include flex(space-between, flex-start);
+    @include flex(center, flex-start);
     .game-img{
-        width: 35%;
+        width: 31%;
         margin-right: 2rem;
 
     }
@@ -12,79 +12,178 @@
         @include flex(space-between, flex-start);
         flex-direction: column;
         gap: 1rem;
-        width: 65%;
+        width: 55%;
         text-transform: capitalize;
-        h3{
-            font-weight: 100;
-            color: rgb(174, 172, 172);
-            margin-bottom: 0.5rem;
-        }
-        .consoles{
-            display: flex;
-            gap: 0.5rem;
-            p{
-                padding: 0.2rem 0.5rem;
-                border-radius: 10px;
-                background-color: $accents;
-                color: black;
-                font-size: 12px;
+        div{
+            width: 100%;
+            h3{
+                font-weight: 100;
+                color: rgb(174, 172, 172);
+                margin-bottom: 0.5rem;
             }
-        }
-        .actions{
-            display: flex;
-            gap: 1rem;
-            margin-top: 0.5rem;
-            form{
-                button{
-                    border-radius: 25px;
-                    padding: .2rem .5rem;
-                    cursor: pointer;
-                    background-color: $secondary;
-                    border: none;
-                    outline: none;
-                    color: $main-light;
-                    transition: 0.5s ease-in-out;
-                }
-                button:hover{
+            .consoles{
+                display: flex;
+                gap: 0.5rem;
+                p{
+                    padding: 0.2rem 0.5rem;
+                    border-radius: 10px;
                     background-color: $accents;
                     color: black;
+                    font-size: 12px;
                 }
             }
-        }
-        .summary{
-            h2{
-                margin: 1rem 0;
-                font-weight: 400;
-            }
-            .summary-para{
-                margin-bottom: 1rem;
-                color: rgb(174, 172, 172);
-                line-height: 1.5rem;
-                font-size: 18px;
-            }
-            .dev{
+            .actions{
                 display: flex;
-                width: 80%;
+                gap: 1rem;
+                margin-top: 0.5rem;
+                form{
+                    button{
+                        border-radius: 25px;
+                        padding: .2rem .5rem;
+                        cursor: pointer;
+                        background-color: $secondary;
+                        border: none;
+                        outline: none;
+                        color: $main-light;
+                        transition: 0.5s ease-in-out;
+                    }
+                    button:hover{
+                        background-color: $accents;
+                        color: black;
+                    }
+                }
+            }
+            .summary{
+                h2{
+                    margin: 1rem 0;
+                    font-weight: 400;
+                }
+                .summary-para{
+                    margin-bottom: 1rem;
+                    color: rgb(174, 172, 172);
+                    line-height: 1.5rem;
+                    font-size: 18px;
+                }
+                .dev{
+                    display: flex;
+                    width: 100%;
+                    @include flex(space-between, center);
+                    border-radius: 10px;
+                    background-color: #795f913a;
+                    div{
+                        padding: 1rem;
+                    }
+                }
+            }
+            .screenshots{
                 @include flex(space-between, center);
                 border-radius: 10px;
+                flex-wrap: wrap;
+                gap: 1rem;
+                margin-top: 1rem;
                 background-color: #795f913a;
+                padding: 1rem;
                 div{
-                    padding: 1rem;
+                    width: 10rem;
+                    img{
+    
+                        border-radius: 10px;
+                    }
                 }
             }
         }
-        .screenshots{
-            @include flex(space-between, center);
-            border-radius: 10px;
-            gap: 1rem;
-            margin-top: 1rem;
-            background-color: #795f913a;
-            padding: 1rem;
-            div{
-                width: 10rem;
-                img{
+    }
+}
 
-                    border-radius: 10px;
+
+
+@media(max-width: 768px) {
+    .game-page-container{
+        padding: 6rem 0rem;
+        @include flex(center, flex-start);
+    }
+}
+@media(max-width: 425px) {
+    .game-page-container{
+        @include flex(center, center);
+        padding: 5rem 0rem;
+
+        flex-direction: column;
+        .game-img{
+            width: 90%;
+            margin: 0 0 1rem 0;
+        }
+        .game-info{
+            gap: 1rem;
+            width: 90%;
+            h3{
+                font-weight: 100;
+                color: rgb(174, 172, 172);
+                margin-bottom: 0.5rem;
+                font-size: 15px;
+            }
+            p{
+                font-size: 12px;
+            }
+            div{
+                .consoles{
+                    p{
+                        padding: 0.1rem 0.2rem;
+                        font-size: 12px;
+                    }
+                }
+                .summary{
+                    h2{
+                        margin: 1rem 0;
+                        font-weight: 400;
+                    }
+                    .summary-para{
+                        line-height: 1.2rem;
+                        font-size: 14px;
+                    }
+                    .dev{
+                        display: flex;
+                        width: 100%;
+                        @include flex(space-between, center);
+                        border-radius: 10px;
+                        background-color: #795f913a;
+                        div{
+                            padding: 1rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media(max-width: 375px) {
+    .game-page-container{
+        .game-info{
+            div{
+                .screenshots{
+                    gap: 1rem;
+                    div{
+                        margin: 0 auto;
+                        width: 90%;
+                        img{
+                            border-radius: 10px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media(max-width: 320px) {
+    .game-page-container{
+        .game-info{
+            width: 90%;
+            div{
+                .consoles{
+                    p{
+                        padding: 0.1rem 0.2rem;
+                        font-size: 10px;
+                    }
                 }
             }
         }
