--- a/src/styles/gameCard.scss
+++ b/src/styles/gameCard.scss
@@ -5,25 +5,20 @@
     border-radius: 10px;
     overflow: hidden;
     margin: 20px;
-    height: 17rem;
+
     .text-container{
         position: absolute;
-        width: fit-content;
         height: 100%;
+        width: 100%;
         @include flex(center, center);
         flex-direction: column;
-        text-align: center;
         padding: 10px;
         color: black;
         transition: 1s ease-out;
         translate: 0 100%;
         opacity: 0;
-        margin: 0 auto;
-        h3{
-            font-size: 15px;
-        }
-        p{
-            font-size: 12px;
+        h2{
+            margin-bottom: 1rem;
         }
         a{
             padding: 0.5rem;
