--- a/src/styles/newhome.scss
+++ b/src/styles/newhome.scss
@@ -1,64 +1,68 @@
 @import '_variables';
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 
-.clear {
-    clear: both;
+	@media (prefers-reduced-motion: reduce) {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
 }
-  
-img {
-    max-width: 100%;
-    border: 0px;
+html {
+	scroll-behavior: smooth;
 }
-  
-ul, ol {
-    list-style: none;
-}
-  
-a {
-    text-decoration: none;
-    color: inherit;
-    outline: none;
-    transition: all 0.4s ease-in-out;
-    -webkit-transition: all 0.4s ease-in-out;
-  
-    &:focus, &:active, &:visited {
-      text-decoration: none;
+.games--container{
+  padding-top: 5rem;
+  .search-container{
+    width: 490px;
+    display: block;
+    margin: 0 auto;
+    input#search-bar{
+      margin: 0 auto;
+      width: 100%;
+      height: 45px;
+      padding: 0 20px;
+      font-size: 1rem;
+      border: 1px solid $accents;
       outline: none;
+      transition: 0.5s ease-in-out;
+      &:focus{
+        border: 2px solid $secondary;
+        transition: 0.35s ease;
+        color: $secondary;
+        border-radius: 25px;
+        &::-webkit-input-placeholder{
+          transition: opacity 0.45s ease; 
+          opacity: 0;
+        }
+        &::-moz-placeholder {
+          transition: opacity 0.45s ease; 
+          opacity: 0;
+        }
+        &:-ms-placeholder {
+        transition: opacity 0.45s ease; 
+        opacity: 0;
+        }    
+      }
     }
-  
-    &:hover {
-      text-decoration: none;
-      outline: none;
-      color: #e73700;
+    .search-icon{
+      position: relative;
+      float: right;
+      width: 75px;
+      height: 75px;
+      top: -62px;
+      right: -15px;
     }
-}
-  
-h1 {
-    margin-bottom: 48px;
-    padding-bottom: 16px;
-    line-height: 28px;
-    font-weight: 700;
-    position: relative;
-    text-transform: capitalize;
-}
-  
-.game-title {
-    margin: 0 0 10px;
-    font-size: 20px;
-    line-height: 36px;
-}
-  
-button {
-    outline: none !important;
-}
-  
-/******* Common Element CSS End *********/
-  
-/* -------- title style ------- */
-  
-.line-title {
+  }
+
+  .line-title {
     position: relative;
     width: 400px;
-  
+    padding: 2rem 0 1rem;
+    margin: 0 3rem 2rem;
     &::before, &::after {
       content: "";
       position: absolute;
@@ -67,171 +71,32 @@ button {
       height: 4px;
       border-radius: 2px;
     }
-  
+      
     &::before {
       width: 100%;
       background: #f2f2f2;
     }
-  
+      
     &::after {
       width: 5rem;
       background: $secondary;
     }
-}
-  
-  /******* Middle section CSS Start ******/
-  /* -------- Landing page ------- */
-  
-.game-section {
-    padding: 5rem 50px 0;
-    border: 1px solid red;
-    .owl-stage {
-      margin: 15px 0;
+  }
+  .mySwiper{
+    border-radius: 8px;
+    height: 66vh;
+    width: 90%;
+    padding: 2rem;
+    background-color: #795f913a;
+    .swiper-slide {
       display: flex;
-      border: 1px solid green;
+      justify-content: space-evenly;
     }
-    .trending-games-container{
-        border: 1px solid yellow;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .item {
-      margin: 0 15px 60px;
-      width: 200px;
-      height: 400px;
-      display: flex;
-      align-items: flex-end;
-      -webkit-align-items: flex-end;
-      background: #343434 no-repeat center center / cover;
-      border-radius: 16px;
-      overflow: hidden;
-      position: relative;
-      transition: all 0.4s ease-in-out;
-      -webkit-transition: all 0.4s ease-in-out;
-      cursor: pointer;
-      border: 1px solid green;
+  }
 
+  //********
   
-      &.active {
-        width: 500px;
-        box-shadow: 12px 40px 40px rgba(0, 0, 0, 0.25);
-        -webkit-box-shadow: 12px 40px 40px rgba(0, 0, 0, 0.25);
-      }
-  
-      &:after {
-        content: "";
-        display: block;
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        left: 0;
-        top: 0;
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
-      }
-    }
-    .item-desc {
-      padding: 0 24px 12px;
-      border: 1px solid red;
-      color: #fff;
-      position: relative;
-      z-index: 1;
-      overflow: hidden;
-      transform: translateY(calc(100% - 54px));
-      -webkit-transform: translateY(calc(100% - 54px));
-      transition: all 0.4s ease-in-out;
-      -webkit-transition: all 0.4s ease-in-out;
-    }
-  
-    .item.active .item-desc {
-      transform: none;
-      -webkit-transform: none;
-    }
-  
-    .item-desc p {
-      opacity: 0;
-      -webkit-transform: translateY(32px);
-      transform: translateY(32px);
-      transition: all 0.4s ease-in-out 0.2s;
-      -webkit-transition: all 0.4s ease-in-out 0.2s;
-    }
-  
-    .item.active .item-desc p {
-      opacity: 1;
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-  
-    .owl-theme.custom-carousel .owl-dots {
-      margin-top: -20px;
-      position: relative;
-      z-index: 5;
-    }
-}
 
-@media(max-width: 1024px) {
-    .game-section {
-        padding: 5rem 50px 0;
-        .item {
-            width: 9rem;
-            &.active {
-              width: 350px;
-            }
-            .game-title{
-                font-size: 15px;
-                line-height: 26px;
 
-            }
-            
-        }
-    }
 }
-@media(max-width: 768px) {
-    .game-section {
-        padding: 5rem 20px 0;
-        .item {
-            width: 7rem;
-            &.active {
-              width: 250px;
-            }
-            .game-title{
-                font-size: 18px;
-                text-overflow: clip;
-                line-height: 26px;
-            }
-        }
-    }
-}
-@media(max-width: 425px) {
-    .game-section {
-        padding: 5rem 10px 0;
-        .item {
-            width: 6rem;
-            &.active {
-              width: 190px;
-            }
-            .game-title{
-                font-size: 18px;
-                text-overflow: clip;
-                line-height: 26px;
-            }
-        }
-    }
-}
-@media(max-width: 375px) {
-    .line-title {
-        position: relative;
-        width: 250px;
-    }
-    .game-section {
-        padding: 5rem 15px 0;
-        .item {
-            width: 450px;
-            &.active {
-                width: 500px;
-            }
-        }
-    }
-}
-    
-    
+ 
