--- a/src/styles/carouselGameCard.scss
+++ b/src/styles/carouselGameCard.scss
@@ -2,21 +2,23 @@
 
 .game--card{
     border-radius: 5px;
-    height: 22rem;
+    height: 20rem;
     width: 25rem;
     transition: 0.5s ease-in-out;
     .game--card--img{
-        max-width: 100%;
-        max-height: 62%;
+        width: 100%;
+        height: 62%;
         overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 5px 5px 0 0;
+        overflow: hidden;
+
         img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
         }
     }
     .game--card--info{
@@ -42,8 +44,28 @@
             
         }
     }
+    &:hover{
+        scale: 1.05;
+        box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.2);
+    }
 }
-.game--card:hover{
-    scale: 1.05;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.2);
+
+@media(max-width: 1024px) {
+    .game--card{
+        .game--card--info{
+            gap: 0.2rem;
+
+            a{
+                h1{
+                    font-weight: 300;
+                    font-size: 18px;
+                }
+            }
+            p, i{
+                font-size: 12px;
+            }
+        }
+
+    }
 }
+    
