added search and display one game when  clicked on it

--- a/src/styles/carouselGameCard.scss
+++ b/src/styles/carouselGameCard.scss
@@ -41,7 +41,7 @@
         }
         a:hover{
             color: $accents;
-            
+            cursor: pointer;
         }
     }
     &:hover{
