--- a/src/styles/gamePage.scss
+++ b/src/styles/gamePage.scss
@@ -31,6 +31,7 @@
             .consoles{
                 display: flex;
                 gap: 0.5rem;
+                margin: 1rem 0;
                 p{
                     padding: 0.2rem 0.5rem;
                     border-radius: 10px;
@@ -39,14 +40,41 @@
                     font-size: 12px;
                 }
             }
+            .game-reviews{
+                @include flex(space-between, flex-start);
+                height: 5rem;
+                flex-wrap: wrap;
+                width: 100%;
+                .review{
+                    border: 1px solid $accents;
+                    text-align: center;
+                    max-width: 18%;
+                    height: 90%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    border-radius: 5px;
+                    transition: 0.5s ease-in-out;
+                    p{
+                        letter-spacing: .1rem;
+                        font-weight: 600;
+                    }
+                    &:hover{
+                        scale: 1.1;
+                        border-radius: 15px;
+                        background-color: #795f913a;
+                    }
+                }
+            }
             .actions{
                 display: flex;
                 gap: 1rem;
-                margin-top: 0.5rem;
+                margin: 1rem 0;
+
                 form{
                     button{
                         border-radius: 25px;
-                        padding: .2rem .5rem;
+                        padding: .4rem .7rem;
                         cursor: pointer;
                         background-color: $secondary;
                         border: none;
@@ -113,9 +141,9 @@
     .game-page-container{
         @include flex(center, center);
         padding: 5rem 0rem;
-
         flex-direction: column;
         .game-img{
+            height: 70vh;
             width: 90%;
             margin: 0 0 1rem 0;
         }
@@ -184,6 +212,13 @@
     .game-page-container{
         .game-info{
             width: 90%;
+            .game-reviews{
+                .review{
+                    h3{
+                        font-size: 12px;
+                    }
+                }
+            }
             div{
                 .consoles{
                     p{
