--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,6 +1,8 @@
 @import '_variables';
 
+//---------
 
+    
 /* navigation styles*/
 header {
     height: 3rem;
@@ -12,13 +14,54 @@ header {
     z-index: 100;
     ul{
         @include flex(space-evenly, center);
-        width: 15rem;
+        width: 5rem;
         @include reset-list-styles;
         @include border-bottom-animation-white;
     }
     /* navigation styles*/
     .sign-up{
-        @include flex(space-evenly, center);
+        margin-right: 2rem;
+        padding: 0 2rem;
+        ul{
+            width: 100%;
+            .hero{
+                margin-right: 2rem;
+            }
+            .dropdown {
+                position: relative;
+                display: inline-block;
+                li{
+                    padding: 0 2rem;
+                    a{
+                        color: white;
+                    }
+                }
+                &:hover{
+                    .dropdown-content{
+                        display: block;
+                    }
+                }
+                .dropdown-content {
+                    display: none;
+                    position: absolute;
+                    background-color: $secondary;
+                    min-width: 160px;
+                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                    z-index: 1;
+                    a{
+                        color: white;
+                        padding: 12px 16px;
+                        text-decoration: none;
+                        display: block;
+                        transition: .2s ease-in-out;
+                        &:hover{
+                            background-color: $accents;
+                        }
+                    }
+                }
+                
+            }
+        }
         .sign-in{
             a{
                 color: white;
@@ -122,7 +165,7 @@ header {
         .nav-links{
             display: none;
         }
-        .sign-in{
+        .sign-up{
             display: none;
         }
         img{
