--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 /* COLORS*/
 $main-dark: #001B2E;
 $main-light: #FBFEF9;
-$secondary: #8A2BE2;
+$secondary: #693798;
 $accents: #BE97C6;
 
 /*game cards*/
