--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -15,7 +15,7 @@ img {
 
 .showcase {
 	height: 100vh;
-    padding-top: 4rem;
+    padding-top: 5rem;
 	position: relative;
 	background: url('../characters.jpg') no-repeat center center/cover;
 	.showcase-top {
@@ -183,6 +183,7 @@ img {
 .text-lg {
 	font-size: 1.8rem;
 	margin-bottom: 1rem;
+	line-height: 2.5rem;
 }
 
 .text-md {
