--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,187 +1,135 @@
 @import '_variables';
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 
-.games-container{
-    padding: 5rem 15%;
-    text-align: center;
-	
-    .mySwiper{
-        background-color: #795f913a;
-        border-radius: 15px;
-		.SwiperSlide{
-			height: fit-content;
-			width: fit-content;
-		}
-    }
-    h1{
-        font-size: 48px;
-        text-transform: capitalize;
-		margin: 3rem 0;
-
-    }
-    .latest-games{
-		margin: 0 auto;
-        .game{
-            @include flex(center, center);
-            flex-wrap: wrap;
+	@media (prefers-reduced-motion: reduce) {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
+}
+html {
+	scroll-behavior: smooth;
+}
+.games--container{
+  padding-top: 6rem;
+  .search-container{
+    width: 490px;
+    display: block;
+    margin: 0 auto;
+    input#search-bar{
+      margin: 0 auto;
+      width: 100%;
+      height: 45px;
+      padding: 0 20px;
+      font-size: 1rem;
+      border: 1px solid $accents;
+      outline: none;
+      transition: 0.5s ease-in-out;
+      &:focus{
+        border: 2px solid $secondary;
+        transition: 0.35s ease;
+        color: $secondary;
+        border-radius: 25px;
+        &::-webkit-input-placeholder{
+          transition: opacity 0.45s ease; 
+          opacity: 0;
         }
+        &::-moz-placeholder {
+          transition: opacity 0.45s ease; 
+          opacity: 0;
+        }
+        &:-ms-placeholder {
+        transition: opacity 0.45s ease; 
+        opacity: 0;
+        }    
+      }
     }
-}
+    .search-icon{
+      position: relative;
+      float: right;
+      width: 75px;
+      height: 75px;
+      top: -62px;
+      right: -15px;
+    }
+  }
+
+  .line-title {
+    position: relative;
+    width: 400px;
+    padding: 2rem 0 1rem;
+    margin: 0 3rem 2rem;
+    &::before, &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 4px;
+      border-radius: 2px;
+    }
+      
+    &::before {
+      width: 100%;
+      background: #f2f2f2;
+    }
+      
+    &::after {
+      width: 5rem;
+      background: $secondary;
+    }
+  }
+  .mySwiper{
+    border-radius: 8px;
+    height: fit-content;
+    width: 80%;
+    padding: 2rem;
+    background-color: #795f913a;
+    .swiper-slide {
+      display: flex;
+      justify-content: space-evenly;
+    }
+  }
+
+  //********
+  
 
 
-
-
-button, input {
-	font: 1em Hind, sans-serif;
-	line-height: 1.5em;
 }
-
-.search-bar {
-	display: flex;
-	padding: 0;
-}
-
-.search-bar input,
-.search-btn, 
-.search-btn:before, 
-.search-btn:after {
-	transition: all 0.25s ease-out;
-}
-.search-bar input,
-.search-btn {
-	width: 3em;
-	height: 3em;
-}
-.search-bar input:invalid:not(:focus),
-.search-btn {
-	cursor: pointer;
-}
-.search-bar,
-.search-bar input:focus,
-.search-bar input:valid  {
-	width: 100%;
-}
-.search-bar input:focus,
-.search-bar input:not(:focus) + .search-btn:focus {
-	outline: transparent;
-}
-.search-bar {
-	margin: auto;
-	justify-content: center;
-	max-width: 30em;
-}
-.search-bar input {
-	background: transparent;
-	border-radius: 1.5em;
-	box-shadow: 0 0 0 0.4em inset;
-	padding: 0.75em;
-	transform: translate(0.5em,0.5em) scale(0.5);
-	transform-origin: 100% 0;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-}
-.search-bar input::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
-.search-bar input:focus,
-.search-bar input:valid {
-	background: #fff;
-	border-radius: 0.375em 0 0 0.375em;
-	box-shadow: 0 0 0 0.1em #d9d9d9 inset;
-	transform: scale(1);
-}
-.search-btn {
-	background: #171717;
-	border-radius: 0 0.75em 0.75em 0 / 0 1.5em 1.5em 0;
-	padding: 0.75em;
-	position: relative;
-	transform: translate(0.25em,0.25em) rotate(45deg) scale(0.25,0.125);
-	transform-origin: 0 50%;
-}
-.search-btn:before, 
-.search-btn:after {
-	content: "";
-	display: block;
-	opacity: 0;
-	position: absolute;
-}
-.search-btn:before {
-	border-radius: 50%;
-	box-shadow: 0 0 0 0.2em $accents inset;
-	top: 0.75em;
-	left: 0.75em;
-	width: 1.2em;
-	height: 1.2em;
-}
-.search-btn:after {
-	background: $accents;
-	border-radius: 0 0.25em 0.25em 0;
-	top: 51%;
-	left: 51%;
-	width: 0.75em;
-	height: 0.25em;
-	transform: translate(0.2em,0) rotate(45deg);
-	transform-origin: 0 50%;
-}
-.search-btn span {
-	display: inline-block;
-	overflow: hidden;
-	width: 1px;
-	height: 1px;
-}
-
-/* Active state */
-.search-bar input:focus + .search-btn,
-.search-bar input:valid + .search-btn {
-	background: $secondary;
-	border-radius: 0 0.375em 0.375em 0;
-	transform: scale(1);
-}
-.search-bar input:focus + .search-btn:before, 
-.search-bar input:focus + .search-btn:after,
-.search-bar input:valid + .search-btn:before, 
-.search-bar input:valid + .search-btn:after {
-	opacity: 1;
-}
-.search-bar input:focus + .search-btn:hover,
-.search-bar input:valid + .search-btn:hover,
-.search-bar input:valid:not(:focus) + .search-btn:focus {
-	background: $main-dark;
-}
-.search-bar input:focus + .search-btn:active,
-.search-bar input:valid + .search-btn:active {
-	transform: translateY(1px);
-}
-
-@media screen and (prefers-color-scheme: dark) {
-	input {
-		color: #f1f1f1;
-	}
-	.search-bar input {
-		box-shadow: 0 0 0 0.4em $secondary inset;
-	}
-	.search-bar input:focus,
-	.search-bar input:valid {
-		background: $accents;
-		box-shadow: 0 0 0 0.1em $accents inset;
-        color: #171717;
-	}
-	.search-btn {
-		background: $secondary;
-	}
-}
-
-    
-@media(max-height: 1440px) {
-	.games-container{
-		padding: 5rem 5%;
-	}
-}
-@media(max-height: 1024px) {
-	.games-container{
+@media(max-width: 1024px) {
+	.games--container{
 		.mySwiper{
-			height: 20rem;
+			width: 90%;
 		}
+	}
+}
+    
+@media(max-width: 425px) {
+	.games--container{
+    .line-title {
+      width: 300px;
+    }
+		.mySwiper{
+			width: 90%;
+		}
+    .search-container{
+      width: 380px;
+    }
+	}
+}
+@media(max-width: 375px) {
+	.games--container{
+    .line-title {
+      font-size: 18px;
+      margin: 0 auto;
+      margin-bottom: 2rem;
+    }
+    .search-container{
+      width: 300px;
+    }
 	}
 }
     
