--- a/src/styles/carouselGameCard.scss
+++ b/src/styles/carouselGameCard.scss
@@ -32,6 +32,7 @@
         text-transform: capitalize;
         text-align: center;
         border-radius: 0 0 5px 5px;
+        padding: 0 1rem;
         a{
             transition: 0.5s ease-in-out;
             h1{
