--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -341,6 +341,7 @@ img {
 		height: 100vh;
 		padding-top: 4rem;
 		position: relative;
+
 		.showcase-top{
 			display: none;
 		}
@@ -348,6 +349,17 @@ img {
 			width: 100%;
 			height: 80vh;
 		}
+	}
+	.showcase::after {
+		background: rgba(0, 0, 0, 0.01);
+		box-shadow: inset 40px 40px 120px #000000, inset -40px -40px 120px #000000;
+	}
+	.container-info {
+		max-width: 90%;;
+	}
+	.text-lg {
+		font-size: 1.2rem;
+		line-height: 2rem;
 	}
 
 }
@@ -362,6 +374,7 @@ img {
 			}
 		}
 	}
+
 }
     
     
