--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -110,7 +110,7 @@ header {
 .mobile-nav{
     @include reset-list-styles;
     position: fixed;
-    top: 0rem;
+    top: 1rem;
     left: -90%;
     min-height: 100vh;
     width: 40%;
@@ -122,12 +122,11 @@ header {
     ul{
         @include border-bottom-animation-white;
         @include flex(space-evenly, flex-start);
-        height: 50vh;
+        height: 65vh;
         width: fit-content;
         position: absolute;
         flex-direction: column;
         font-family: 'Roboto Slab', serif;
-
         li{
             a{
                 color: white;
@@ -171,5 +170,12 @@ header {
         img{
             margin-left: 0;
         }
+    }
+}
+@media screen and (max-width: 425px) {
+
+    .mobile-nav{
+        width: 60%;
+
     }
 }
