--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -16,6 +16,7 @@ html {
 }
 .games--container{
   padding-top: 6rem;
+  margin-bottom: 5rem;
   .search-container{
     width: 490px;
     display: block;
