--- a/src/styles/gamePage.scss
+++ b/src/styles/gamePage.scss
@@ -11,6 +11,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border-radius: 10px
             }
         }
 
@@ -120,7 +121,7 @@
                 .dev{
                     display: flex;
                     width: 100%;
-                    @include flex(space-between, center);
+                    @include flex(space-between, flex-start);
                     border-radius: 10px;
                     background-color: #795f913a;
                     div{
@@ -134,9 +135,13 @@
                 background-color: #795f913a;
                 .mySwiper{
                     border-radius: 10px;
-                    img{
-                        padding: 1rem;                        
+                    padding: 1rem;   
+                    .screen{
+                        border-radius: 10px;                     
+                        height: 98%;
+                        width: 98%;
                     }
+
                 }
 
             }
@@ -206,7 +211,6 @@
                     .dev{
                         display: flex;
                         width: 100%;
-                        @include flex(space-between, center);
                         border-radius: 10px;
                         background-color: #795f913a;
                         div{
